# deepcube

./: .gitignore  README.md  README.zh.md  build_notebook.py  pyproject.toml  train.ipynb
deepcube/: cube3.py  model.py  search.py  server.py  solver_kociemba.py
static/: index.html
tests/: test_cube3.py  test_model.py  test_search.py  test_server.py  test_solver_kociemba.py
