[project]
name = "deepcube"
version = "0.1.0"
description = "DeepCubeA — Rubik's cube solver via deep reinforcement learning + A* search (PyTorch)"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5",
    "numpy>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
]

[project.scripts]
deepcube-serve = "deepcube.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deepcube"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
